# c3po

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  Pipfile  Procfile  README.md  docker-compose.yml  quotes.csv  setup.cfg  setup.py
.ci/heroku/api/: Procfile
.ci/heroku/bot/: Procfile
.github/workflows/: ci_pipeline.yml  lock.yml  test.yml  version.yml
c3po/: __init__.py  _version.py  conf.py  main.py  version.py
c3po/database/: __init__.py  model.py
c3po/flaskr/: __init__.py
c3po/flaskr/static/css/: default.css
c3po/flaskr/templates/: home.html  install_result.html
c3po/modules/: quotes.py  slack.py
c3po/routes/: __init__.py  messenger.py  root.py  slack.py  slack_oauth.py
data/: d3312bf2-765e-48a2-b4f6-0eee7b9736ea
docs/: LICENSE
src/c3po_api/: conf.py  main.py
src/c3po_api/database/: model.py
src/c3po_api/flaskr/: __init__.py
src/c3po_api/modules/: redis.py  scoring.py  slack.py
src/c3po_api/routes/: slack.py
src/c3po_bot/: conf.py  main.py
src/c3po_bot/flaskr/: __init__.py
src/c3po_bot/flaskr/templates/: home.html
src/c3po_bot/modules/: slack.py
src/c3po_bot/routes/: __init__.py  slack_oauth.py
tests/: conftest.py
