[metadata]
name = c3po
description = "Human cyborg relations. How might I serve you?"
authors = ["Stewart Moreland <github.com/stewartmoreland>"]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = "https://c3po-slack-bot.herokuapps.com/"
repository = "https://github.com/stewartmoreland/c3po"

license_file = docs/LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Source = https://github.com/stewartmoreland/c3po
    Tracker = https://github.com/stewartmoreland/c3po/issues

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = c3po/_version.py

[tox]
envlist = py37,py38,py39,py310
minversion = 3.4.0

[testenv]
deps = .[test]
commands = {posargs:pytest}

[aliases]
test=pytest

[flake8]
max-line-length=120

[options.entry_points]
console_scripts =
    screed = c3po.main:main

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s
